login, save storage

--- a/FINAL/travel-booking/src/main/resources/templates/layout/layout.html
+++ b/FINAL/travel-booking/src/main/resources/templates/layout/layout.html
@@ -17,6 +17,8 @@
     <link rel="stylesheet" href="assets/user/fonts/line-icons.css" type="text/css">
     <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&libraries=places"></script>
 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.css" integrity="sha512-3pIirOrwegjM6erE5gPSwkUzO+3cTjpnV9lexlNZqvupR64iZBnOOTiiLPb9M36zpMScbmUNIcHUqKD47M719g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
     <!-- Components CSS -->
     <th:block th:replace="${cssResources} ?: ~{}"></th:block>
 </head>
@@ -51,6 +53,12 @@
     <script src="assets/user/js/custom-nav.js"></script>
 
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/js/bootstrap.min.js"></script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js" integrity="sha512-VEd+nq25CkR676O+pLBnDW09R7VQX9Mdiij052gVCp5yVH3jGtH70Ho/UUv4mJDsEdTvqRCFZg0NKGiojGnUCw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
+<!--    Đăng nhập, đăng ký-->
+    <script src="assets/user/js/login-signup.js"></script>
+
 
     <script>
         // Lấy ngày hiện tại
