update sign up, validate ok

--- a/FINAL/travel-booking/src/main/resources/static/assets/user/css/style.css
+++ b/FINAL/travel-booking/src/main/resources/static/assets/user/css/style.css
@@ -8254,3 +8254,24 @@ ul.sidebar-tags li a:hover {
     width: 60%;
     top: 50%
 }
+.input-row {
+    position: relative;
+}
+
+.input-row.error input {
+    border-color: #e74c3c;
+}
+.input-row small {
+    color: #e74c3c;
+    position: absolute;
+    bottom: -20px;
+    left: 0;
+    visibility: hidden;
+    font-size: 12px;
+}
+
+.input-row.error small {
+    visibility: visible;
+}
+
+
