--- a/FINAL/travel-booking/src/main/resources/templates/fragments/header.html
+++ b/FINAL/travel-booking/src/main/resources/templates/fragments/header.html
@@ -8,10 +8,6 @@
                         <i class="icon-calendar white"></i>
                         <span id="current-date"></span></a>
                     </li>
-                    <li><a href="#" class="white">
-                        <i class="icon-location-pin white"></i>
-                        <span id="current-location"></span></a>
-                    </li>
                     <li><a href="#" class="white"><i class="icon-clock white"></i> Mon-Fri: 10 AM – 5 PM</a></li>
                 </ul>
             </div>
@@ -53,7 +49,7 @@
                                    aria-expanded="false">Hotel</i></a>
                             </li>
                             <li class="submenu dropdown">
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
+                                <a href="/blog" class="dropdown-toggle" role="button"
                                    aria-haspopup="true" aria-expanded="false">Blog</a>
                             </li>
                             <li class="submenu dropdown">
