--- a/FINAL/travel-booking/src/main/resources/templates/user/index.html
+++ b/FINAL/travel-booking/src/main/resources/templates/user/index.html
@@ -46,17 +46,17 @@
                                         <div class="tab-pane fade show active" id="hotelTab">
                                             <form class="row d-flex align-items-center justify-content-between">
                                                 <div class="form-group col-lg-6 mb-2">
-                                                    <label for="destination">Destination</label>
-                                                    <input type="text" class="form-control" id="destination"
+                                                    <label for="destination-hotel">Destination</label>
+                                                    <input type="text" class="form-control" id="destination-hotel"
                                                            placeholder="Enter your destination" autocomplete="on">
                                                 </div>
                                                 <div class="form-group col-lg-6 mb-2">
-                                                    <label for="check-in">Check-in</label>
-                                                    <input type="date" class="form-control" id="check-in">
+                                                    <label for="check-in-hotel">Check-in</label>
+                                                    <input type="date" class="form-control" id="check-in-hotel">
                                                 </div>
                                                 <div class="form-group col-lg-6 mb-2">
-                                                    <label for="check-out">Check-out</label>
-                                                    <input type="date" class="form-control" id="check-out">
+                                                    <label for="check-out-hotel">Check-out</label>
+                                                    <input type="date" class="form-control" id="check-out-hotel">
                                                 </div>
                                                 <div class="form-group col-lg-6 mb-2">
                                                     <label for="guests">Guests</label>
@@ -79,17 +79,17 @@
                                         <div class="tab-pane fade" id="tourTab">
                                             <form class="row d-flex align-items-center justify-content-between">
                                                 <div class="form-group col-lg-6 mb-2">
-                                                    <label for="destination">Destination</label>
-                                                    <input type="text" class="form-control" id="destination"
+                                                    <label for="destination-tour">Destination</label>
+                                                    <input type="text" class="form-control" id="destination-tour"
                                                            placeholder="Enter your destination" autocomplete="on">
                                                 </div>
                                                 <div class="form-group col-lg-6 mb-2">
-                                                    <label for="check-in">Check-in</label>
-                                                    <input type="date" class="form-control" id="check-in">
+                                                    <label for="check-in-tour">Check-in</label>
+                                                    <input type="date" class="form-control" id="check-in-tour">
                                                 </div>
                                                 <div class="form-group col-lg-6 mb-2">
-                                                    <label for="check-out">Check-out</label>
-                                                    <input type="date" class="form-control" id="check-out">
+                                                    <label for="check-out-tour">Check-out</label>
+                                                    <input type="date" class="form-control" id="check-out-tour">
                                                 </div>
                                                 <div class="col-lg-12">
                                                     <div class="form-group mb-0 text-center">
