--- a/FINAL/travel-booking/src/main/resources/templates/layout/layout.html
+++ b/FINAL/travel-booking/src/main/resources/templates/layout/layout.html
@@ -12,6 +12,8 @@
 
     <link href="assets/user/css/plugin.css" rel="stylesheet" type="text/css">
 
+    <link rel="stylesheet" href="assets/admin/fonts/feather-font/css/iconfont.css">
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
     <link rel="stylesheet" href="assets/user/fonts/line-icons.css" type="text/css">
@@ -40,6 +42,8 @@
 <div id="back-to-top">
     <a href="#"></a>
 </div>
+<!--Thư viện axous-->
+<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 
 <script data-cfasync="false"
         src="/assets/admin/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
@@ -59,6 +63,14 @@
 <!--    Đăng nhập, đăng ký-->
 <script src="assets/user/js/login-signup.js"></script>
 
+
+
+
+<script>
+    window.onload = function() {
+        authenticateUserOnLoad();
+    };
+</script>
 
 <script>
     // Lấy ngày hiện tại
