update send email

--- a/FINAL/travel-booking/src/main/resources/templates/management/partner/events.html
+++ b/FINAL/travel-booking/src/main/resources/templates/management/partner/events.html
@@ -112,7 +112,7 @@
                                     <a href="events.html" class="nav-link">All Package Lists</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a href="../partner/addevents.html" class="nav-link">Add Package</a>
+                                    <a href="../../partner/addevents.html" class="nav-link">Add Package</a>
                                 </li>
                             </ul>
                         </div>
@@ -124,7 +124,7 @@
 </a>
                     </li>
                     <li class="nav-item">
-                        <a href="../partner/appointment.html" class="nav-link">
+                        <a href="../../partner/appointment.html" class="nav-link">
 <i class="link-icon" data-feather="table"></i>
 <span class="link-title">Booking Section</span>
 </a>
@@ -282,7 +282,7 @@
                         <li class="breadcrumb-item"><a href="dashboard.html">Dashboard</a></li>
                         <li class="breadcrumb-item active" aria-current="page">Packages</li>
                     </ol>
-                    <a href="../partner/addevents.html" class="btn btn-primary"><i class="link-icon" data-feather="plus"></i> Add Packages</a>
+                    <a href="../../partner/addevents.html" class="btn btn-primary"><i class="link-icon" data-feather="plus"></i> Add Packages</a>
                 </nav>
                 <div class="search-box p-4 bg-white rounded mb-3 box-shadow">
                     <form class="forms-sample">
