--- a/FINAL/travel-booking/src/main/resources/templates/partner/addevents.html
+++ b/FINAL/travel-booking/src/main/resources/templates/partner/addevents.html
@@ -21,10 +21,10 @@
     <div class="page-content">
         <nav class="page-breadcrumb d-flex align-items-center justify-content-between">
             <ol class="breadcrumb mb-0">
-                <li class="breadcrumb-item"><a href="../admin/dashboard.html">Dashboard</a></li>
+                <li class="breadcrumb-item"><a href="../management/partner/dashboard.html">Dashboard</a></li>
                 <li class="breadcrumb-item active" aria-current="page">Package</li>
             </ol>
-            <a href="../admin/events.html" class="btn btn-primary"><i class="link-icon" data-feather="arrow-left"></i>
+            <a href="../management/partner/events.html" class="btn btn-primary"><i class="link-icon" data-feather="arrow-left"></i>
                 Back To List</a>
         </nav>
         <div class="row">
