--- a/FINAL/travel-booking/src/main/resources/templates/partner/appointment.html
+++ b/FINAL/travel-booking/src/main/resources/templates/partner/appointment.html
@@ -45,7 +45,7 @@
             <div class="sidebar-body">
                 <ul class="nav">
                     <li class="nav-item">
-                        <a href="../admin/dashboard.html" class="nav-link">
+                        <a href="../management/partner/dashboard.html" class="nav-link">
 <i class="link-icon" data-feather="box"></i>
 <span class="link-title">Dashboard</span>
 </a>
@@ -109,7 +109,7 @@
                         <div class="collapse" id="events">
                             <ul class="nav sub-menu">
                                 <li class="nav-item">
-                                    <a href="../admin/events.html" class="nav-link">All Package Lists</a>
+                                    <a href="../management/partner/events.html" class="nav-link">All Package Lists</a>
                                 </li>
                                 <li class="nav-item">
                                     <a href="addevents.html" class="nav-link">Add Package</a>
@@ -130,7 +130,7 @@
 </a>
                     </li>
                     <li class="nav-item">
-                        <a href="../admin/coupon.html" class="nav-link">
+                        <a href="../management/partner/coupon.html" class="nav-link">
 <i class="link-icon" data-feather="gift"></i>
 <span class="link-title">Coupons</span>
 </a>
@@ -161,13 +161,13 @@
                         <div class="collapse" id="setting">
                             <ul class="nav sub-menu">
                                 <li class="nav-item">
-                                    <a href="../admin/company-profile.html" class="nav-link">Company Profile</a>
+                                    <a href="../management/partner/company-profile.html" class="nav-link">Company Profile</a>
                                 </li>
                                 <li class="nav-item">
                                     <a href="role-manange-list.html" class="nav-link">Role Management</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a href="../admin/configuration.html" class="nav-link">Configuration</a>
+                                    <a href="../management/partner/configuration.html" class="nav-link">Configuration</a>
                                 </li>
                             </ul>
                         </div>
@@ -279,10 +279,10 @@
             <div class="page-content">
                 <nav class="page-breadcrumb d-flex align-items-center justify-content-between">
                     <ol class="breadcrumb mb-0">
-                        <li class="breadcrumb-item"><a href="../admin/dashboard.html">Dashboard</a></li>
+                        <li class="breadcrumb-item"><a href="../management/partner/dashboard.html">Dashboard</a></li>
                         <li class="breadcrumb-item active" aria-current="page">Booking Lists</li>
                     </ol>
-                    <a href="../admin/dashboard.html" class="btn btn-primary"><i class="link-icon" data-feather="arrow-left"></i> Back To List</a>
+                    <a href="../management/partner/dashboard.html" class="btn btn-primary"><i class="link-icon" data-feather="arrow-left"></i> Back To List</a>
                 </nav>
                 <div class="search-box p-4 bg-white rounded mb-3 box-shadow">
                     <form class="forms-sample">
