--- a/FINAL/travel-booking/src/main/resources/templates/fragments/avatar_info.html
+++ b/FINAL/travel-booking/src/main/resources/templates/fragments/avatar_info.html
@@ -3,17 +3,17 @@
     <div class="nav-item dropdown avatar" style="display: none">
         <a class="nav-link dropdown-toggle" href="#" id="profileDropdown" role="button"
            data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            <img class=" rounded-circle" style="width: 30px; height: 30px" src="assets/user/images/reviewer/1.jpg" alt="profile">
+            <img class=" rounded-circle" style="width: 30px; height: 30px" src="assets/user/images/default-avatar.png" alt="profile">
         </a>
         <div class="dropdown-menu p-0" aria-labelledby="profileDropdown">
             <div class="d-flex flex-column align-items-center border-bottom px-5 py-1">
                 <div class="mb-1">
-                    <img style="width: 68px; height: 68px" class="rounded-circle" src="assets/user/images/reviewer/1.jpg" alt>
+                    <img style="width: 68px; height: 68px" class="rounded-circle" src="assets/user/images/default-avatar.png" alt>
                 </div>
                 <div class="text-center">
-                    <p class="tx-16 fw-bolder" style="font-size: 15px">Tony Vu</p>
+                    <p class="tx-16 fw-bolder fullname-info" style="font-size: 15px">User name</p>
                     <p class="tx-12 text-muted" style="font-size: 12px">
-                        <a href="/">toantravel@gmail.com</a>
+                        <a href="/" class="email-info">toantravel@gmail.com</a>
                     </p>
                 </div>
             </div>
@@ -37,9 +37,9 @@
                     </a>
                 </li>
 
-                <li class="dropdown-item py-1">
+                <li class="dropdown-item py-1 signout-btn" id="signout-btn">
                     <a class="text-body ms-0">
-                        <i class="fas fa-sign-out-alt signout-btn mr-2" id="signout-btn" style="padding-right: 10px";></i>
+                        <i class="fas fa-sign-out-alt  mr-2"  style="padding-right: 10px";></i>
                         <span>Log Out</span>
                     </a>
                 </li>
