--- a/FINAL/travel-booking/src/main/resources/templates/management/partner/dashboard.html
+++ b/FINAL/travel-booking/src/main/resources/templates/management/partner/dashboard.html
@@ -33,7 +33,7 @@
 
         <nav class="sidebar">
             <div class="sidebar-header">
-                <a href="../user/index.html" class="sidebar-brand">
+                <a href="../../user/index.html" class="sidebar-brand">
                     <img src="assets/user/images/logo1.png" alt="logo" class="w-75">
                 </a>
                 <div class="sidebar-toggler not-active">
@@ -64,14 +64,14 @@
                                     <a href="events.html" class="nav-link">Room List</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a href="../partner/addevents.html" class="nav-link">Add New Room</a>
+                                    <a href="../../partner/addevents.html" class="nav-link">Add New Room</a>
                                 </li>
                             </ul>
                         </div>
                     </li>
 
                     <li class="nav-item">
-                        <a href="../partner/appointment.html" class="nav-link">
+                        <a href="../../partner/appointment.html" class="nav-link">
                             <i class="link-icon" data-feather="table"></i>
                             <span class="link-title">Booking</span>
                         </a>
@@ -691,7 +691,7 @@
 
             <footer
                 class="footer d-flex flex-column flex-md-row align-items-center justify-content-between px-4 py-3 border-top small">
-                <p class="text-muted mb-1 mb-md-0">Copyright © 2022 <a href="../user/index.html"
+                <p class="text-muted mb-1 mb-md-0">Copyright © 2022 <a href="../../user/index.html"
                         target="_blank">Travelin</a>.</p>
                 <p class="text-muted">Powered By <i class="mb-1 text-primary ms-1 icon-sm" data-feather="heart"></i>
                     Bizberg Themes</p>
