update send email

--- a/FINAL/travel-booking/src/main/resources/templates/fragments/avatar_info.html
+++ b/FINAL/travel-booking/src/main/resources/templates/fragments/avatar_info.html
@@ -13,13 +13,13 @@
                 <div class="text-center">
                     <p class="tx-16 fw-bolder fullname-info" style="font-size: 15px">User name</p>
                     <p class="tx-12 text-muted" style="font-size: 12px">
-                        <a href="/" class="email-info">toantravel@gmail.com</a>
+                        <p class="email-info">toantravel@gmail.com</p>
                     </p>
                 </div>
             </div>
             <ul class="list-unstyled p-1" style="font-size: 13px">
                 <li class="dropdown-item py-1">
-                    <a href="profile.html" class="text-body ms-0">
+                    <a href="/dashboard_user" class="text-body ms-0">
                         <i class="far fa-user" style="padding-right: 10px";></i>
                         <span>Profile</span>
                     </a>
