--- a/FINAL/travel-booking/src/main/resources/templates/fragments/login_modal.html
+++ b/FINAL/travel-booking/src/main/resources/templates/fragments/login_modal.html
@@ -55,7 +55,7 @@
                     </div>
 
                     <div class="form-group mb-2">
-                      <a href="#" class="float-end" data-bs-toggle="modal" data-bs-target="#forgotPasswordModal">Lost your password?</a></h4>
+                      <a href="/recover_pass" class="float-end">Lost your password?</a></h4>
                     </div>
 
                     <div class="input-row">
