--- a/FINAL/travel-booking/src/main/resources/templates/layout/layout_dashboard_user.html
+++ b/FINAL/travel-booking/src/main/resources/templates/layout/layout_dashboard_user.html
@@ -72,7 +72,7 @@
                                 <a href="events.html" class="nav-link">Change Password</a>
                             </li>
                             <li class="nav-item">
-                                <a href="addevents.html" class="nav-link">Add New Room</a>
+                                <a href="addevents.html" class="nav-link">Payment</a>
                             </li>
                         </ul>
                     </div>
