--- a/FINAL/travel-booking/src/main/resources/templates/user/recover_password.html
+++ b/FINAL/travel-booking/src/main/resources/templates/user/recover_password.html
@@ -31,42 +31,6 @@
 <main id="main-content">
     <div class="page-content">
 
-        <section class="breadcrumb-area bread-bg-9">
-            <div class="breadcrumb-wrap">
-                <div class="container">
-                    <div class="row align-items-center">
-                        <div class="col-lg-6">
-                            <div class="breadcrumb-content">
-                                <div class="section-heading">
-                                    <h2 class="sec__title text-white">Recover Password</h2>
-                                </div>
-                            </div>
-                            <!-- end breadcrumb-content -->
-                        </div>
-                        <!-- end col-lg-6 -->
-                        <div class="col-lg-6">
-                            <div class="breadcrumb-list text-right">
-                                <ul class="list-items">
-                                    <li><a href="index.html">Home</a></li>
-                                    <li>Pages</li>
-                                    <li>Recover Password</li>
-                                </ul>
-                            </div>
-                            <!-- end breadcrumb-list -->
-                        </div>
-                        <!-- end col-lg-6 -->
-                    </div>
-                    <!-- end row -->
-                </div>
-                <!-- end container -->
-            </div>
-            <!-- end breadcrumb-wrap -->
-            <div class="bread-svg-box">
-                <svg class="bread-svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 10" preserveAspectRatio="none"><polygon points="100 0 50 10 0 0 0 10 100 10"></polygon></svg>
-            </div>
-            <!-- end bread-svg -->
-        </section>
-
         <section class="contact-area padding-top-100px padding-bottom-70px">
             <div class="container">
                 <div class="row">
@@ -84,13 +48,14 @@
                                     <form method="post">
                                         <div class="input-box">
                                             <label class="label-text">Your Email</label>
-                                            <div class="form-group">
+                                            <div class="form-group input-row">
                                                 <span class="la la-envelope-o form-icon"></span>
                                                 <input class="form-control" type="email" name="email" placeholder="Enter email address">
+                                                <small style="color: #e74c3c">Error</small>
                                             </div>
                                         </div>
                                         <div class="btn-box mt-3">
-                                            <button type="button" class="theme-btn">Reset Password</button>
+                                            <button type="button" class="theme-btn reset-password" id="reset-password-btn">Reset Password</button>
                                         </div>
                                     </form>
                                 </div>
