--- a/FINAL/travel-booking/src/main/resources/templates/management/partner/configuration.html
+++ b/FINAL/travel-booking/src/main/resources/templates/management/partner/configuration.html
@@ -21,8 +21,8 @@
     <div class="page-content">
         <nav class="page-breadcrumb d-flex align-items-center justify-content-between">
             <ol class="breadcrumb mb-0">
-                <li class="breadcrumb-item"><a href="dashboard.html">Dashboard</a></li>
-                <li class="breadcrumb-item"><a href="dashboard.html">Setting</a></li>
+                <li class="breadcrumb-item"><a href="dashboard-partner.html">Dashboard</a></li>
+                <li class="breadcrumb-item"><a href="dashboard-partner.html">Setting</a></li>
                 <li class="breadcrumb-item active" aria-current="page">configuration</li>
             </ol>
         </nav>
