--- a/FINAL/travel-booking/src/main/resources/templates/management/partner/dashboard-partner.html
+++ b/FINAL/travel-booking/src/main/resources/templates/management/partner/dashboard-partner.html
@@ -45,7 +45,7 @@
             <div class="sidebar-body">
                 <ul class="nav">
                     <li class="nav-item active">
-                        <a href="dashboard.html" class="nav-link">
+                        <a href="dashboard-partner.html" class="nav-link">
                             <i class="link-icon" data-feather="box"></i>
                             <span class="link-title">Dashboard</span>
                         </a>
