--- a/FINAL/travel-booking/src/main/resources/templates/management/partner/events.html
+++ b/FINAL/travel-booking/src/main/resources/templates/management/partner/events.html
@@ -45,7 +45,7 @@
             <div class="sidebar-body">
                 <ul class="nav">
                     <li class="nav-item">
-                        <a href="dashboard.html" class="nav-link">
+                        <a href="dashboard-partner.html" class="nav-link">
 <i class="link-icon" data-feather="box"></i>
 <span class="link-title">Dashboard</span>
 </a>
@@ -279,7 +279,7 @@
             <div class="page-content">
                 <nav class="page-breadcrumb d-flex align-items-center justify-content-between">
                     <ol class="breadcrumb mb-0">
-                        <li class="breadcrumb-item"><a href="dashboard.html">Dashboard</a></li>
+                        <li class="breadcrumb-item"><a href="dashboard-partner.html">Dashboard</a></li>
                         <li class="breadcrumb-item active" aria-current="page">Packages</li>
                     </ol>
                     <a href="../../partner/addevents.html" class="btn btn-primary"><i class="link-icon" data-feather="plus"></i> Add Packages</a>
