--- a/FINAL/travel-booking/src/main/resources/templates/user/recover_password.html
+++ b/FINAL/travel-booking/src/main/resources/templates/user/recover_password.html
@@ -63,6 +63,33 @@
                             </div>
                             <!-- end form-content -->
                         </div>
+                        <div class="form-content password-reset-form" style="display: none;">
+                            <div class="contact-form-action">
+                                <form method="post">
+                                    <div class="input-box">
+                                        <label class="label-text">New Password</label>
+                                        <div class="form-group input-row">
+                                            <span class="la la-lock form-icon"></span>
+                                            <input class="form-control" type="password" name="new-password" placeholder="Enter new password">
+                                            <small style="color: #e74c3c">Error</small>
+                                        </div>
+                                    </div>
+                                    <div class="input-box">
+                                        <label class="label-text">Confirm New Password</label>
+                                        <div class="form-group input-row">
+                                            <span class="la la-lock form-icon"></span>
+                                            <input class="form-control" type="password" name="confirm-password" placeholder="Confirm new password">
+                                            <small style="color: #e74c3c">Error</small>
+                                        </div>
+                                    </div>
+                                    <div class="btn-box mt-3">
+                                        <button type="button" class="theme-btn reset-password" id="confirm-password-btn">Reset Password</button>
+                                    </div>
+                                </form>
+                            </div>
+                            <!-- end contact-form-action -->
+                        </div>
+
                         <!-- end form-box -->
                     </div>
                     <!-- end col-lg-8 -->
