--- a/FINAL/travel-booking/src/main/resources/templates/management/partner/coupon.html
+++ b/FINAL/travel-booking/src/main/resources/templates/management/partner/coupon.html
@@ -21,7 +21,7 @@
         <div class="page-content">
             <nav class="page-breadcrumb d-flex align-items-center justify-content-between">
                 <ol class="breadcrumb mb-0">
-                    <li class="breadcrumb-item"><a href="dashboard.html">Dashboard</a></li>
+                    <li class="breadcrumb-item"><a href="dashboard-partner.html">Dashboard</a></li>
                     <li class="breadcrumb-item active" aria-current="page">Coupon List</li>
                 </ol>
                 <a href="addcoupon.html" class="btn btn-primary"><i class="link-icon" data-feather="plus"></i> Add Coupon</a>
