--- a/FINAL/travel-booking/src/main/resources/templates/fragments/header.html
+++ b/FINAL/travel-booking/src/main/resources/templates/fragments/header.html
@@ -69,16 +69,9 @@
                             <a href="#" data-bs-toggle="modal" data-bs-target="#signInSignUp" class="me-3 user-partner">
                                 <i class="icon-user"></i> Login/Register
                             </a>
-                            <a href="/booking" class="nir-btn white user-partner">Become Local Partner</a>
+                            <a href="#" class="nir-btn white user-partner" data-bs-toggle="modal" data-bs-target="#signUpPartner">Become Local Partner</a>
                         </div>
-<!--                        <div class="avatar" style="display: none">-->
-<!--                            <a class="nav-link dropdown-toggle" href="#" id="profileDropdown" role="button"-->
-<!--                               data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">-->
-<!--                                <img style="width: 30px; height: 30px" class=" rounded-circle"-->
-<!--                                     src="assets/user/images/reviewer/1.jpg" alt="profile">-->
-<!--                            </a>-->
 
-<!--                        </div>-->
                         <th:block th:replace="~{fragments/avatar_info :: avatar-info}"></th:block>
                         <div id="slicknav-mobile"></div>
                     </div>
