--- a/FINAL/travel-booking/src/main/resources/templates/layout/layout.html
+++ b/FINAL/travel-booking/src/main/resources/templates/layout/layout.html
@@ -36,14 +36,17 @@
 <!-- LOGIN MODAL -->
 <th:block th:replace="~{fragments/login_modal :: login-modal}"></th:block>
 
+
+<!-- SIGNUP PARTNER MODAL -->
+<th:block th:replace="~{fragments/signup-partner :: login-partner-modal}"></th:block>
+
 <!-- FOOTER -->
 <th:block th:replace="~{fragments/footer :: footer}"></th:block>
 
 <div id="back-to-top">
     <a href="#"></a>
 </div>
-<!--Thư viện axous-->
-<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+
 
 <script data-cfasync="false"
         src="/assets/admin/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
@@ -60,8 +63,12 @@
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js" integrity="sha512-VEd+nq25CkR676O+pLBnDW09R7VQX9Mdiij052gVCp5yVH3jGtH70Ho/UUv4mJDsEdTvqRCFZg0NKGiojGnUCw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
+<!--    Kiểm tra quyền truy cập-->
+<script src="assets/user/js/check-permission.js"></script>
+
 <!--    Đăng nhập, đăng ký-->
 <script src="assets/user/js/login-signup.js"></script>
+
 
 
 <script>
