--- a/FINAL/travel-booking/src/main/resources/templates/fragments/signup-partner.html
+++ b/FINAL/travel-booking/src/main/resources/templates/fragments/signup-partner.html
@@ -21,17 +21,17 @@
 
                   <form method="post" action="#" name="contactform1" id="contactform1">
                     <div class="form-group mb-4 input-row">
-                      <input type="text" name="user_name" class="form-control signup-email" id="signup-email"
+                      <input type="text" name="user_name" class="form-control partner-signup-email" id="signup-email"
                              placeholder="Email Address" autocomplete="off">
                       <small style="color: #e74c3c">Error</small>
                     </div>
                     <div class="form-group mb-4 input-row">
-                      <input type="password" name="password_name" class="form-control signup-password"
+                      <input type="password" name="password_name" class="form-control partner-signup-password"
                              id="signup-password" placeholder="Password" autocomplete="off">
                       <small style="color: #e74c3c">Error</small>
                     </div>
                     <div class="form-group mb-4 input-row">
-                      <input type="password" name="password_name" class="form-control signup-confirm-password"
+                      <input type="password" name="password_name" class="form-control partner-signup-confirm-password"
                              id="signup-confirm-password" placeholder="Re-enter Password" autocomplete="off">
                       <small style="color: #e74c3c">Error</small>
                     </div>
@@ -41,7 +41,7 @@
                         have read and accept the <a href="/term_policy" style="color: #029e9d">Terms and Privacy</a> Policy?</label>
                     </div>
                     <div class="input-row">
-                      <button class="btn nir-btn w-100 login-btn mb-2" id="signup-btn">Register</button>
+                      <button class="btn nir-btn w-100 login-btn mb-2" id="signup-partner-btn">Register</button>
                     </div>
 
                     <p class="text-center">Already have an account? <a href="#"
