--- a/FINAL/travel-booking/src/main/resources/templates/layout/layout.html
+++ b/FINAL/travel-booking/src/main/resources/templates/layout/layout.html
@@ -4,19 +4,19 @@
 <head>
     <meta charset="UTF-8">
     <title th:replace="${title}">Page Title</title>
-    <link rel="shortcut icon" type="image/x-icon" href="assets/user/images/favicon.png">
+    <link rel="shortcut icon" type="image/x-icon" href="/assets/user/images/favicon.png">
 
-    <link href="assets/user/css/bootstrap.min.css" rel="stylesheet" type="text/css">
+    <link href="/assets/user/css/bootstrap.min.css" rel="stylesheet" type="text/css">
 
-    <link href="assets/user/css/style.css" rel="stylesheet" type="text/css">
+    <link href="/assets/user/css/style.css" rel="stylesheet" type="text/css">
 
-    <link href="assets/user/css/plugin.css" rel="stylesheet" type="text/css">
+    <link href="/assets/user/css/plugin.css" rel="stylesheet" type="text/css">
 
-    <link rel="stylesheet" href="assets/admin/fonts/feather-font/css/iconfont.css">
+    <link rel="stylesheet" href="/assets/admin/fonts/feather-font/css/iconfont.css">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
-    <link rel="stylesheet" href="assets/user/fonts/line-icons.css" type="text/css">
+    <link rel="stylesheet" href="/assets/user/fonts/line-icons.css" type="text/css">
     <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&libraries=places"></script>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.css" integrity="sha512-3pIirOrwegjM6erE5gPSwkUzO+3cTjpnV9lexlNZqvupR64iZBnOOTiiLPb9M36zpMScbmUNIcHUqKD47M719g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -50,32 +50,25 @@
 
 <script data-cfasync="false"
         src="/assets/admin/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
-<script src="assets/user/js/jquery-3.5.1.min.js"></script>
-<script src="assets/user/js/bootstrap.min.js"></script>
-<script src="assets/user/js/particles.js"></script>
-<script src="assets/user/js/particlerun.js"></script>
-<script src="assets/user/js/plugin.js"></script>
-<script src="assets/user/js/main.js"></script>
-<script src="assets/user/js/custom-swiper.js"></script>
-<script src="assets/user/js/custom-nav.js"></script>
+<script src="/assets/user/js/jquery-3.5.1.min.js"></script>
+<script src="/assets/user/js/bootstrap.min.js"></script>
+<script src="/assets/user/js/particles.js"></script>
+<script src="/assets/user/js/particlerun.js"></script>
+<script src="/assets/user/js/plugin.js"></script>
+<script src="/assets/user/js/main.js"></script>
+<script src="/assets/user/js/custom-swiper.js"></script>
+<script src="/assets/user/js/custom-nav.js"></script>
 
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/js/bootstrap.min.js"></script>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js" integrity="sha512-VEd+nq25CkR676O+pLBnDW09R7VQX9Mdiij052gVCp5yVH3jGtH70Ho/UUv4mJDsEdTvqRCFZg0NKGiojGnUCw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
 <!--    Kiểm tra quyền truy cập-->
-<script src="assets/user/js/check-permission.js"></script>
+<script src="/assets/user/js/check-permission.js"></script>
 
 <!--    Đăng nhập, đăng ký-->
-<script src="assets/user/js/login-signup.js"></script>
+<script src="/assets/user/js/login-signup.js"></script>
 
-
-
-<script>
-    window.onload = function() {
-        authenticateUserOnLoad();
-    };
-</script>
 
 <script>
     // Lấy ngày hiện tại
