--- a/FINAL/travel-booking/src/main/resources/templates/layout/layout_dashboard_partner.html
+++ b/FINAL/travel-booking/src/main/resources/templates/layout/layout_dashboard_partner.html
@@ -34,7 +34,7 @@
 
     <nav class="sidebar">
         <div class="sidebar-header">
-            <a href="../user/index.html" class="sidebar-brand">
+            <a href="/home" class="sidebar-brand">
                 <img src="/assets/user/images/logo1.png" alt="logo" class="w-75">
             </a>
             <div class="sidebar-toggler not-active">
@@ -46,16 +46,16 @@
         <div class="sidebar-body">
             <ul class="nav">
                 <li class="nav-item">
-                    <a href="/dashboard-user" class="nav-link">
+                    <a href="/partner/dashboard-partner" class="nav-link">
                         <i class="link-icon" data-feather="box"></i>
-                        <span class="link-title">My Profile</span>
+                        <span class="link-title">Hotel Profile</span>
                     </a>
                 </li>
 
                 <li class="nav-item">
-                    <a href="appointment.html" class="nav-link">
+                    <a href="/partner/room-management" class="nav-link">
                         <i class="link-icon" data-feather="table"></i>
-                        <span class="link-title">My booking</span>
+                        <span class="link-title">Room Management</span>
                     </a>
                 </li>
 
@@ -69,7 +69,7 @@
                     <div class="collapse" id="events">
                         <ul class="nav sub-menu">
                             <li class="nav-item">
-                                <a href="events.html" class="nav-link">Change Password</a>
+                                <a href="/partner/change-password" class="nav-link">Change Password</a>
                             </li>
                             <li class="nav-item">
                                 <a href="addevents.html" class="nav-link">Payment</a>
@@ -81,8 +81,8 @@
 
                 <li class="nav-item">
                     <a href="coupon.html" class="nav-link">
-                        <i class="link-icon" data-feather="star"></i>
-                        <span class="link-title">My review</span>
+                        <i class="link-icon" data-feather="gift"></i>
+                        <span class="link-title">Coupon</span>
                     </a>
                 </li>
                 <li class="nav-item">
