--- a/FINAL/travel-booking/src/main/resources/templates/user/tour-single1.html
+++ b/FINAL/travel-booking/src/main/resources/templates/user/tour-single1.html
@@ -8,11 +8,11 @@
 
     <link rel="shortcut icon" type="image/x-icon" href="images/favicon.png">
 
-    <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
+    <link href="assets/user/css/bootstrap.min.css" rel="stylesheet" type="text/css">
 
-    <link href="css/style.css" rel="stylesheet" type="text/css">
+    <link href="assets/user/css/style.css" rel="stylesheet" type="text/css">
 
-    <link href="css/plugin.css" rel="stylesheet" type="text/css">
+    <link href="assets/user/css/plugin.css" rel="stylesheet" type="text/css">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
@@ -52,7 +52,7 @@
 
                     <div class="navbar-header">
                         <a class="navbar-brand" href="index.html">
-<img src="images/logo.png" alt="image">
+<img src="assets/user/images/logo.png" alt="image">
 </a>
                     </div>
 
@@ -259,42 +259,42 @@
                         <div class="thumbnail-images position-relative">
                             <div class="slider-store rounded overflow-hidden">
                                 <div>
-                                    <img src="images/trending/trending1.jpg" alt="1">
+                                    <img src="assets/user/images/trending/trending1.jpg" alt="1">
                                 </div>
                                 <div>
-                                    <img src="images/trending/trending2.jpg" alt="1">
+                                    <img src="assets/user/images/trending/trending2.jpg" alt="1">
                                 </div>
                                 <div>
-                                    <img src="images/trending/trending3.jpg" alt="1">
+                                    <img src="assets/user/images/trending/trending3.jpg" alt="1">
                                 </div>
                                 <div>
-                                    <img src="images/trending/trending5.jpg" alt="1">
+                                    <img src="assets/user/images/trending/trending5.jpg" alt="1">
                                 </div>
                                 <div>
-                                    <img src="images/trending/trending6.jpg" alt="1">
+                                    <img src="assets/user/images/trending/trending6.jpg" alt="1">
                                 </div>
                                 <div>
-                                    <img src="images/trending/trending7.jpg" alt="1">
+                                    <img src="assets/user/images/trending/trending7.jpg" alt="1">
                                 </div>
                             </div>
                             <div class="slider-thumbs">
                                 <div>
-                                    <img src="images/trending/trending1.jpg" alt="1">
+                                    <img src="assets/user/images/trending/trending1.jpg" alt="1">
                                 </div>
                                 <div>
-                                    <img src="images/trending/trending2.jpg" alt="1">
+                                    <img src="assets/user/images/trending/trending2.jpg" alt="1">
                                 </div>
                                 <div>
-                                    <img src="images/trending/trending3.jpg" alt="1">
+                                    <img src="assets/user/images/trending/trending3.jpg" alt="1">
                                 </div>
                                 <div>
-                                    <img src="images/trending/trending5.jpg" alt="1">
+                                    <img src="assets/user/images/trending/trending5.jpg" alt="1">
                                 </div>
                                 <div>
-                                    <img src="images/trending/trending6.jpg" alt="1">
+                                    <img src="assets/user/images/trending/trending6.jpg" alt="1">
                                 </div>
                                 <div>
-                                    <img src="images/trending/trending7.jpg" alt="1">
+                                    <img src="assets/user/images/trending/trending7.jpg" alt="1">
                                 </div>
                             </div>
                         </div>
@@ -488,7 +488,7 @@
                         <h5 class="border-b pb-2 mb-2">Showing 16 verified guest comments</h5>
                         <div class="comment-box">
                             <div class="comment-image">
-                                <img src="images/reviewer/1.jpg" alt="image">
+                                <img src="assets/user/images/reviewer/1.jpg" alt="image">
                             </div>
                             <div class="comment-content rounded">
                                 <h5 class="mb-1">Helena</h5>
@@ -517,7 +517,7 @@
                         </div>
                         <div class="comment-box">
                             <div class="comment-image">
-                                <img src="images/reviewer/2.jpg" alt="image">
+                                <img src="assets/user/images/reviewer/2.jpg" alt="image">
                             </div>
                             <div class="comment-content rounded">
                                 <h5 class="mb-1">Helena</h5>
@@ -657,7 +657,7 @@
                                     <div class="col-lg-4 col-md-6 col-sm-6 mb-4">
                                         <div class="trend-item1">
                                             <div class="trend-image position-relative rounded">
-                                                <img src="images/destination/destination17.jpg" alt="image">
+                                                <img src="assets/user/images/destination/destination17.jpg" alt="image">
                                                 <div class="trend-content d-flex align-items-center justify-content-between position-absolute bottom-0 p-4 w-100 z-index">
                                                     <div class="trend-content-title">
                                                         <h5 class="mb-0"><a href="grid-leftfilter.html" class="theme1">Italy</a></h5>
@@ -672,7 +672,7 @@
                                     <div class="col-lg-4 col-md-6 col-sm-6 mb-4">
                                         <div class="trend-item1">
                                             <div class="trend-image position-relative rounded">
-                                                <img src="images/destination/destination14.jpg" alt="image">
+                                                <img src="assets/user/images/destination/destination14.jpg" alt="image">
                                                 <div class="trend-content d-flex align-items-center justify-content-between position-absolute bottom-0 p-4 w-100 z-index">
                                                     <div class="trend-content-title">
                                                         <h5 class="mb-0"><a href="grid-leftfilter.html" class="theme1">Tokyo</a></h5>
@@ -733,32 +733,32 @@
         <div class="row align-items-center partner-in partner-slider">
             <div class="col-md-3 col-sm-6">
                 <div class="partner-item p-4 py-2 rounded bg-lgrey">
-                    <img src="images/cl-1.png" alt>
+                    <img src="assets/user/images/cl-1.png" alt>
                 </div>
             </div>
             <div class="col-md-3 col-sm-6">
                 <div class="partner-item p-4 py-2 rounded bg-lgrey">
-                    <img src="images/cl-5.png" alt>
+                    <img src="assets/user/images/cl-5.png" alt>
                 </div>
             </div>
             <div class="col-md-3 col-sm-6">
                 <div class="partner-item p-4 py-2 rounded bg-lgrey">
-                    <img src="images/cl-2.png" alt>
+                    <img src="assets/user/images/cl-2.png" alt>
                 </div>
             </div>
             <div class="col-md-3 col-sm-6">
                 <div class="partner-item p-4 py-2 rounded bg-lgrey">
-                    <img src="images/cl-3.png" alt>
+                    <img src="assets/user/images/cl-3.png" alt>
                 </div>
             </div>
             <div class="col-md-3 col-sm-6">
                 <div class="partner-item p-4 py-2 rounded bg-lgrey">
-                    <img src="images/cl-4.png" alt>
+                    <img src="assets/user/images/cl-4.png" alt>
                 </div>
             </div>
             <div class="col-md-3 col-sm-6">
                 <div class="partner-item p-4 py-2 rounded bg-lgrey">
-                    <img src="images/cl-5.png" alt>
+                    <img src="assets/user/images/cl-5.png" alt>
                 </div>
             </div>
         </div>
@@ -778,47 +778,47 @@
                 <div class="row attract-slider">
                     <div class="col-md-3 col-sm-6">
                         <div class="insta-image rounded">
-                            <a href="gallery.html"><img src="images/insta/ins-3.jpg" alt="insta"></a>
+                            <a href="gallery.html"><img src="assets/user/images/insta/ins-3.jpg" alt="insta"></a>
                         </div>
                     </div>
                     <div class="col-md-3 col-sm-6">
                         <div class="insta-image rounded">
-                            <a href="gallery.html"><img src="images/insta/ins-4.jpg" alt="insta"></a>
+                            <a href="gallery.html"><img src="assets/user/images/insta/ins-4.jpg" alt="insta"></a>
                         </div>
                     </div>
                     <div class="col-md-3 col-sm-6">
                         <div class="insta-image rounded">
-                            <a href="gallery.html"><img src="images/insta/ins-5.jpg" alt="insta"></a>
+                            <a href="gallery.html"><img src="assets/user/images/insta/ins-5.jpg" alt="insta"></a>
                         </div>
                     </div>
                     <div class="col-md-3 col-sm-6">
                         <div class="insta-image rounded">
-                            <a href="gallery.html"><img src="images/insta/ins-1.jpg" alt="insta"></a>
+                            <a href="gallery.html"><img src="assets/user/images/insta/ins-1.jpg" alt="insta"></a>
                         </div>
                     </div>
                     <div class="col-md-3 col-sm-6">
                         <div class="insta-image rounded">
-                            <a href="gallery.html"><img src="images/insta/ins-7.jpg" alt="insta"></a>
+                            <a href="gallery.html"><img src="assets/user/images/insta/ins-7.jpg" alt="insta"></a>
                         </div>
                     </div>
                     <div class="col-md-3 col-sm-6">
                         <div class="insta-image rounded">
-                            <a href="gallery.html"><img src="images/insta/ins-8.jpg" alt="insta"></a>
+                            <a href="gallery.html"><img src="assets/user/images/insta/ins-8.jpg" alt="insta"></a>
                         </div>
                     </div>
                     <div class="col-md-3 col-sm-6">
                         <div class="insta-image rounded">
-                            <a href="gallery.html"><img src="images/insta/ins-2.jpg" alt="insta"></a>
+                            <a href="gallery.html"><img src="assets/user/images/insta/ins-2.jpg" alt="insta"></a>
                         </div>
                     </div>
                     <div class="col-md-3 col-sm-6">
                         <div class="insta-image rounded">
-                            <a href="gallery.html"><img src="images/insta/ins-6.jpg" alt="insta"></a>
+                            <a href="gallery.html"><img src="assets/user/images/insta/ins-6.jpg" alt="insta"></a>
                         </div>
                     </div>
                     <div class="col-md-3 col-sm-6">
                         <div class="insta-image rounded">
-                            <a href="gallery.html"><img src="images/insta/ins-9.jpg" alt="insta"></a>
+                            <a href="gallery.html"><img src="assets/user/images/insta/ins-9.jpg" alt="insta"></a>
                         </div>
                     </div>
                 </div>
@@ -831,7 +831,7 @@
             <div class="row">
                 <div class="col-lg-4 col-md-6 col-sm-12 mb-4 pe-4">
                     <div class="footer-about">
-                        <img src="images/logo-white.png" alt>
+                        <img src="assets/user/images/logo-white.png" alt>
                         <p class="mt-3 mb-3 white">
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Odio suspendisse leo neque iaculis molestie sagittis maecenas aenean eget molestie sagittis.
                         </p>
@@ -1063,14 +1063,14 @@
 </div>
 
 <script data-cfasync="false" src="/assets/admin/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
-<script src="js/jquery-3.5.1.min.js"></script>
-<script src="js/bootstrap.min.js"></script>
-<script src="js/particles.js"></script>
-<script src="js/particlerun.js"></script>
-<script src="js/plugin.js"></script>
-<script src="js/main.js"></script>
-<script src="js/custom-accordian.js"></script>
-<script src="js/custom-nav.js"></script>
+<script src="assets/user/js/jquery-3.5.1.min.js"></script>
+<script src="assets/user/js/bootstrap.min.js"></script>
+<script src="assets/user/js/particles.js"></script>
+<script src="assets/user/js/particlerun.js"></script>
+<script src="assets/user/js/plugin.js"></script>
+<script src="assets/user/js/main.js"></script>
+<script src="assets/user/js/custom-accordian.js"></script>
+<script src="assets/user/js/custom-nav.js"></script>
 </body>
 
 </html>
